mobile overflow fixed

--- a/main-final.css
+++ b/main-final.css
@@ -6,6 +6,8 @@ body{
 }
 
 .wrapper {
+  position: relative;
+  overflow-x: hidden;
   height: 100vh;
    /* margin: 0 auto; */
    display: flex;
